FIx close button on mobile

--- a/src/styles/Project.module.css
+++ b/src/styles/Project.module.css
@@ -87,6 +87,6 @@
   }
   .close {
     top: -4.2rem;
-    right: -2.3rem;
+    right: -0.3rem;
   }
 }
